Fix user dropdown off-screen issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,11 @@
 
     &.tb-right {
       width: 80%;
+
+      .dropdown {
+        left: unset;
+        right: 0;
+      }
     }
   }
 }
